@@ -14,10 +14,10 @@ import ca.uhn.fhir.model.api.annotation.ResourceDef;
 import org.hl7.fhir.r4.model.*;
 import org.projecthusky.common.enums.EnumConstants;
 import org.projecthusky.common.enums.LanguageCode;
-import org.projecthusky.fhir.emed.ch.common.annotation.ExpectsValidResource;
+import org.projecthusky.fhir.core.ch.annotation.ExpectsValidResource;
+import org.projecthusky.fhir.core.ch.resource.r4.ChCorePatientEpr;
 import org.projecthusky.fhir.emed.ch.common.error.InvalidEmedContentException;
-import org.projecthusky.fhir.emed.ch.common.resource.ChCorePatientEpr;
-import org.projecthusky.fhir.emed.ch.common.util.FhirSystem;
+import org.projecthusky.fhir.core.ch.util.FhirSystem;
 import org.projecthusky.fhir.emed.ch.epr.enums.CompositionTitle;
 import org.projecthusky.fhir.emed.ch.epr.resource.ChEmedEprComposition;
 import org.projecthusky.fhir.emed.ch.epr.resource.ChEmedEprPractitionerRole;
@@ -98,7 +98,7 @@ public class ChEmedEprCompositionDis extends ChEmedEprComposition {
         if (!section.hasEntry()) {
             throw new InvalidEmedContentException("The section has no entries");
         }
-        final var resource = section.getEntry().get(0).getResource();
+        final var resource = section.getEntry().getFirst().getResource();
         if (resource instanceof final ChEmedEprMedicationDispenseDis medicationDispense) {
             return medicationDispense;
         }
